--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <button onclick="window.location.href='/auth'">Auth</button>
     </body>
 </html>
