--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello world</title>
+        <meta charset="UTF-8" />
+        <title>Gemini</title>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/home.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
+    <header>
+        <h1>Gemini</h1>
+    </header>
     <body>
-        <h1>Hello World!</h1>
-        <button onclick="window.location.href='/auth'">Auth</button>
+        <a id="windowsDownload" href="https://github.com/Gabe-H/Gemini/releases/download/v4.1.1/Gemini-Setup-4.2.1.exe">Windows Download</a>
+        <a id="macDownload">Mac Download (not available yet)</a>
+        <a id="linuxDownload">Linux Download (not available yet)</a>
+        <br><br>
+        <a id="allDownload" href="https://github.com/Gabe-H/Gemini/releases/latest">Latest Release</a>
     </body>
 </html>
