--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,9 +10,9 @@
         <h1>Gemini</h1>
     </header>
     <body>
-        <a id="windowsDownload" href="https://github.com/Gabe-H/Gemini/releases/download/v4.1.1/Gemini-Setup-4.2.1.exe">Windows Download</a>
-        <a id="macDownload">Mac Download (not available yet)</a>
-        <a id="linuxDownload">Linux Download (not available yet)</a>
+        <a id="windowsDownload" href=<%= winLink %>>Windows Download</a>
+        <a id="macDownload" href=<%= macLink %>>macOS Download</a>
+        <a id="linuxDownload" href=<%= linuxLink %>>Linux Download</a>
         <br><br>
         <a id="allDownload" href="https://github.com/Gabe-H/Gemini/releases/latest">Latest Release</a>
     </body>
